--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "kentico-cloud-delivery": "^5.7.2",
     "rxjs": "^6.5.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
